--- a/reactchess/practicechesscode.html
+++ b/reactchess/practicechesscode.html
@@ -83,6 +83,12 @@
       const [inCheck, setInCheck] = React.useState(false);
       const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
 
+      // Function to announce the current player's turn using speech synthesis
+      function announceTurn(player) {
+        const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
+        window.speechSynthesis.speak(utterance);
+      }
+
       // Start or restart the game
       function startRestartGame() {
         setGame(initialGameState);
@@ -91,6 +97,7 @@
         setGameOver(false);
         setInCheck(false);
         setCheckedKingPosition(null);
+        announceTurn("White"); // Announce white's turn at the beginning of the game
       }
 
       // Handle square click for moving pieces
@@ -119,6 +126,10 @@
                 setGame(newGame);
                 setSelectedSquare(null);
                 setIsWhiteTurn(!isWhiteTurn);
+
+                // Announce the next player's turn after a move
+                const nextPlayer = isWhiteTurn ? "Black" : "White";
+                announceTurn(nextPlayer);
 
                 // Check if the opponent's king is now in check
                 const opponentKingPos = findKing(newGame, isWhiteTurn ? 'k' : 'K');
@@ -206,24 +217,20 @@
       function isPathBlocked(startRow, startCol, targetRow, targetCol) {
         const rowStep = targetRow > startRow ? 1 : targetRow < startRow ? -1 : 0;
         const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
-
         let row = startRow + rowStep;
         let col = startCol + colStep;
-
         while (row !== targetRow || col !== targetCol) {
-          if (game[row][col] !== '') {
-            return true;
-          }
+          if (game[row][col] !== '') return true;
           row += rowStep;
           col += colStep;
         }
         return false;
       }
 
-      function findKing(game, king) {
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            if (game[row][col] === king) {
+      function findKing(newGame, king) {
+        for (let row = 0; row < newGame.length; row++) {
+          for (let col = 0; col < newGame[row].length; col++) {
+            if (newGame[row][col] === king) {
               return [row, col];
             }
           }
@@ -231,87 +238,79 @@
         return null;
       }
 
-      function isKingInCheck(game, kingPos, isWhiteKing) {
-        const [kingRow, kingCol] = kingPos;
-
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            const piece = game[row][col];
-            if (piece && isPlayerPiece(piece, !isWhiteKing)) {
-              if (isValidMove(piece, row, col, kingRow, kingCol, game)) {
-                return true;
+      function isKingInCheck(newGame, kingPosition, isWhiteTurn) {
+        const opponentMoves = [];
+        for (let row = 0; row < newGame.length; row++) {
+          for (let col = 0; col < newGame[row].length; col++) {
+            const piece = newGame[row][col];
+            if (piece !== '' && isPlayerPiece(piece, !isWhiteTurn)) {
+              for (let targetRow = 0; targetRow < newGame.length; targetRow++) {
+                for (let targetCol = 0; targetCol < newGame[targetRow].length; targetCol++) {
+                  if (isValidMove(piece, row, col, targetRow, targetCol, newGame)) {
+                    opponentMoves.push([targetRow, targetCol]);
+                  }
+                }
               }
             }
           }
         }
-        return false;
+        return opponentMoves.some(([r, c]) => r === kingPosition[0] && c === kingPosition[1]);
       }
 
       return (
         <div>
+          <div className="turn-info">
+            {gameOver ? "Game Over!" : `Current Turn: ${isWhiteTurn ? 'White' : 'Black'}`}
+          </div>
           <div className="button-container">
-            <button onClick={startRestartGame}>{gameOver ? "Start Game" : "Start/Restart Game"}</button>
+            <button onClick={startRestartGame}>{gameOver ? 'Restart Game' : 'Start/Restart Game'}</button>
           </div>
-          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
-          {inCheck && <h2 style={{ color: 'red', textAlign: 'center' }}>Check!</h2>}
           <div className="board-container">
-            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+            <Board game={game} selectedSquare={selectedSquare} onClick={handleClick} />
           </div>
-          {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
         </div>
       );
     }
 
-    // Board component
-    function Board({ game, onSquareClick, selectedSquare }) {
+    function Board({ game, selectedSquare, onClick }) {
       return (
-        <div>
-          {game.map((row, rowIndex) => (
-            <div key={rowIndex} style={{ display: 'flex' }}>
-              {row.map((value, colIndex) => (
-                <Square
-                  key={colIndex}
-                  value={value}
-                  onClick={() => onSquareClick(rowIndex, colIndex)}
-                  isLight={(rowIndex + colIndex) % 2 === 0}
-                  isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-                />
-              ))}
-            </div>
-          ))}
+        <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 60px)', gridGap: 0 }}>
+          {game.map((row, rowIndex) =>
+            row.map((square, colIndex) => (
+              <Square
+                key={`${rowIndex}-${colIndex}`}
+                piece={square}
+                selected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+                onClick={() => onClick(rowIndex, colIndex)}
+              />
+            ))
+          )}
         </div>
       );
     }
 
-    // Square component
-    function Square({ value, onClick, isLight, isSelected }) {
-      const squareStyle = {
-        width: '80px',
-        height: '80px',
-        display: 'flex',
-        justifyContent: 'center',
-        alignItems: 'center',
-        cursor: 'pointer',
-        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
-        border: '1px solid #999'
-      };
-
-      const pieceDisplay = () => {
-        if (value) {
-          return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
-        }
-        return null;
-      };
-
+    function Square({ piece, selected, onClick }) {
+      const backgroundColor = selected ? '#a9d7ff' : (piece !== '' ? '#f0d9b5' : '#b58863');
       return (
-        <button style={squareStyle} onClick={onClick}>
-          {pieceDisplay()}
-        </button>
+        <div
+          onClick={onClick}
+          style={{
+            width: '60px',
+            height: '60px',
+            backgroundColor,
+            display: 'flex',
+            justifyContent: 'center',
+            alignItems: 'center',
+            cursor: 'pointer',
+            border: '1px solid #000',
+          }}
+        >
+          {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
+        </div>
       );
     }
 
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(<Game />);
+    ReactDOM.render(<Game />, document.getElementById('root'));
   </script>
 </body>
 </html>
