--- a/reactchess/practice2.html
+++ b/reactchess/practice2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with TTS</title>
+  <title>Chess Game with Check Mechanic</title>
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js" crossorigin></script>
@@ -75,12 +75,6 @@
       'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
     };
 
-    // Function to use the text-to-speech (TTS) feature
-    function speak(text) {
-      const utterance = new SpeechSynthesisUtterance(text);
-      window.speechSynthesis.speak(utterance);
-    }
-
     function Game() {
       const [game, setGame] = React.useState(initialGameState);
       const [selectedSquare, setSelectedSquare] = React.useState(null);
@@ -88,6 +82,18 @@
       const [gameOver, setGameOver] = React.useState(false);
       const [inCheck, setInCheck] = React.useState(false);
       const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
+
+      // Function to announce the current player's turn using speech synthesis
+      function announceTurn(player) {
+        const utterance = new SpeechSynthesisUtterance(`${player}'s turn`);
+        window.speechSynthesis.speak(utterance);
+      }
+
+      // Function to announce when a king is in check
+      function announceCheck(player) {
+        const utterance = new SpeechSynthesisUtterance(`${player} King is in check!`);
+        window.speechSynthesis.speak(utterance);
+      }
 
       // Start or restart the game
       function startRestartGame() {
@@ -97,7 +103,7 @@
         setGameOver(false);
         setInCheck(false);
         setCheckedKingPosition(null);
-        speak("Game started. White's turn.");
+        announceTurn("White"); // Announce white's turn at the beginning of the game
       }
 
       // Handle square click for moving pieces
@@ -117,7 +123,6 @@
 
               if (targetPiece.toLowerCase() === 'k') {
                 setGameOver(true);
-                speak(`Game Over! ${currentPlayer} wins by capturing the King.`);
                 alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
               }
 
@@ -128,12 +133,16 @@
                 setSelectedSquare(null);
                 setIsWhiteTurn(!isWhiteTurn);
 
+                // Announce the next player's turn after a move
+                const nextPlayer = isWhiteTurn ? "Black" : "White";
+                announceTurn(nextPlayer);
+
                 // Check if the opponent's king is now in check
                 const opponentKingPos = findKing(newGame, isWhiteTurn ? 'k' : 'K');
                 if (isKingInCheck(newGame, opponentKingPos, !isWhiteTurn)) {
                   setInCheck(true);
                   setCheckedKingPosition(opponentKingPos);
-                  speak(`${currentPlayer} has placed the opponent's King in check.`);
+                  announceCheck(isWhiteTurn ? "Black" : "White"); // Announce check for the opponent's king
                   alert(`${currentPlayer} has placed the opponent's King in check!`);
                 } else {
                   setInCheck(false);
@@ -196,7 +205,7 @@
             return Math.abs(rowDiff) === Math.abs(colDiff) && !isPathBlocked(startRow, startCol, targetRow, targetCol);
 
           case 'q':
-            if (Math.abs(rowDiff) === Math.abs(colDiff) || colDiff === 0 || rowDiff === 0) {
+            if (colDiff === 0 || rowDiff === 0 || Math.abs(rowDiff) === Math.abs(colDiff)) {
               return !isPathBlocked(startRow, startCol, targetRow, targetCol);
             }
             return false;
@@ -212,24 +221,20 @@
       function isPathBlocked(startRow, startCol, targetRow, targetCol) {
         const rowStep = targetRow > startRow ? 1 : targetRow < startRow ? -1 : 0;
         const colStep = targetCol > startCol ? 1 : targetCol < startCol ? -1 : 0;
-
         let row = startRow + rowStep;
         let col = startCol + colStep;
-
         while (row !== targetRow || col !== targetCol) {
-          if (game[row][col] !== '') {
-            return true;
-          }
+          if (game[row][col] !== '') return true;
           row += rowStep;
           col += colStep;
         }
         return false;
       }
 
-      function findKing(game, king) {
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            if (game[row][col] === king) {
+      function findKing(newGame, king) {
+        for (let row = 0; row < newGame.length; row++) {
+          for (let col = 0; col < newGame[row].length; col++) {
+            if (newGame[row][col] === king) {
               return [row, col];
             }
           }
@@ -237,87 +242,79 @@
         return null;
       }
 
-      function isKingInCheck(game, kingPos, isWhiteKing) {
-        const [kingRow, kingCol] = kingPos;
-
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            const piece = game[row][col];
-            if (piece && isPlayerPiece(piece, !isWhiteKing)) {
-              if (isValidMove(piece, row, col, kingRow, kingCol, game)) {
-                return true;
+      function isKingInCheck(newGame, kingPosition, isWhiteTurn) {
+        const opponentMoves = [];
+        for (let row = 0; row < newGame.length; row++) {
+          for (let col = 0; col < newGame[row].length; col++) {
+            const piece = newGame[row][col];
+            if (piece !== '' && isPlayerPiece(piece, !isWhiteTurn)) {
+              for (let targetRow = 0; targetRow < newGame.length; targetRow++) {
+                for (let targetCol = 0; targetCol < newGame[targetRow].length; targetCol++) {
+                  if (isValidMove(piece, row, col, targetRow, targetCol, newGame)) {
+                    opponentMoves.push([targetRow, targetCol]);
+                  }
+                }
               }
             }
           }
         }
-        return false;
+        return opponentMoves.some(([r, c]) => r === kingPosition[0] && c === kingPosition[1]);
       }
 
       return (
         <div>
+          <div className="turn-info">
+            {gameOver ? "Game Over!" : `Current Turn: ${isWhiteTurn ? 'White' : 'Black'}`}
+          </div>
           <div className="button-container">
-            <button onClick={startRestartGame}>{gameOver ? "Start Game" : "Start/Restart Game"}</button>
+            <button onClick={startRestartGame}>{gameOver ? 'Restart Game' : 'Start/Restart Game'}</button>
           </div>
-          <h2 className="turn-info">{isWhiteTurn ? "White's Turn" : "Black's Turn"}</h2>
-          {inCheck && <h2 style={{ color: 'red', textAlign: 'center' }}>Check!</h2>}
           <div className="board-container">
-            <Board game={game} onSquareClick={handleClick} selectedSquare={selectedSquare} />
+            <Board game={game} selectedSquare={selectedSquare} onClick={handleClick} />
           </div>
-          {gameOver && <h2 style={{ color: 'red', textAlign: 'center' }}>Game Over</h2>}
         </div>
       );
     }
 
-    // Board component
-    function Board({ game, onSquareClick, selectedSquare }) {
+    function Board({ game, selectedSquare, onClick }) {
       return (
-        <div>
-          {game.map((row, rowIndex) => (
-            <div key={rowIndex} style={{ display: 'flex' }}>
-              {row.map((value, colIndex) => (
-                <Square
-                  key={colIndex}
-                  value={value}
-                  onClick={() => onSquareClick(rowIndex, colIndex)}
-                  isLight={(rowIndex + colIndex) % 2 === 0}
-                  isSelected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
-                />
-              ))}
-            </div>
-          ))}
+        <div style={{ display: 'grid', gridTemplateColumns: 'repeat(8, 60px)', gridGap: 0 }}>
+          {game.map((row, rowIndex) =>
+            row.map((square, colIndex) => (
+              <Square
+                key={`${rowIndex}-${colIndex}`}
+                piece={square}
+                selected={selectedSquare && selectedSquare[0] === rowIndex && selectedSquare[1] === colIndex}
+                onClick={() => onClick(rowIndex, colIndex)}
+              />
+            ))
+          )}
         </div>
       );
     }
 
-    // Square component
-    function Square({ value, onClick, isLight, isSelected }) {
-      const squareStyle = {
-        width: '80px',
-        height: '80px',
-        display: 'flex',
-        justifyContent: 'center',
-        alignItems: 'center',
-        cursor: 'pointer',
-        backgroundColor: isSelected ? '#ffeb3b' : (isLight ? '#8ebf42' : '#2b8a3e'),
-        border: '1px solid #999'
-      };
-
-      const pieceDisplay = () => {
-        if (value) {
-          return <img src={pieceImages[value]} alt={value} style={{ width: '70px', height: '70px' }} />;
-        }
-        return null;
-      };
-
+    function Square({ piece, selected, onClick }) {
+      const backgroundColor = selected ? '#a9d7ff' : (piece !== '' ? '#f0d9b5' : '#b58863');
       return (
-        <button style={squareStyle} onClick={onClick}>
-          {pieceDisplay()}
-        </button>
+        <div
+          onClick={onClick}
+          style={{
+            width: '60px',
+            height: '60px',
+            backgroundColor,
+            display: 'flex',
+            justifyContent: 'center',
+            alignItems: 'center',
+            cursor: 'pointer',
+            border: '1px solid #000',
+          }}
+        >
+          {piece && <img src={pieceImages[piece]} alt={piece} style={{ width: '50px', height: '50px' }} />}
+        </div>
       );
     }
 
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(<Game />);
+    ReactDOM.render(<Game />, document.getElementById('root'));
   </script>
 </body>
 </html>
